# poketrade-back-django

./: .env  .gitignore  pyproject.toml
pokemons/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
pokemons/migrations/: 0001_initial.py  0002_load_pokemons.py  0003_user.py
poketrade/: asgi.py  settings.py  wsgi.py
poketrade/pokemons/: models.py  serializers.py
poketrade/pokemons/migrations/: 0001_initial.py
poketrade/poketrade/: settings.py  urls.py
