[tool.poetry]
name = "poketrade"
version = "0.1.0"
description = ""
authors = ["relby <kudinov.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
django-types = "^0.16.0"
djangorestframework-types = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
