[tool.poetry]
name = "poketrade"
version = "0.1.0"
description = ""
authors = ["relby <kudinov.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.3"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.5"
httpx = "^0.23.0"


[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
django-types = "^0.16.0"
djangorestframework-types = "^0.8.0"
types-requests = "^2.28.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
